# gitplothash

./: README.md  demo.ipynb  pyproject.toml
src/gitmatplotlib/: __init__.py  _auto.py  _git.py  _stamp.py
tests/: test_auto.py  test_git.py  test_stamp.py
