[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitmatplotlib"
version = "0.1.0"
description = "Annotate matplotlib plots with git commit info"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gitmatplotlib"]
